@@ -40,7 +40,7 @@ subroutine dvanqq
 
   complex(kind=DP) :: fact, fact1, ZDOTC
   complex(kind=DP), allocatable :: aux1 (:), aux2 (:),&
-       aux3 (:), aux5 (:), veff (:,:)
+       aux3 (:), aux5 (:), veff (:,:), sk(:)
   ! work space
   complex(kind=DP), allocatable, target :: qgm(:)
   ! the augmentation function at G
@@ -56,17 +56,16 @@ subroutine dvanqq
   int2(:,:,:,:,:) = (0.d0, 0.d0)
   int4(:,:,:,:,:) = (0.d0, 0.d0)
   int5(:,:,:,:,:) = (0.d0, 0.d0)
+  allocate (sk  (  ngm))    
   allocate (aux1(  ngm))    
   allocate (aux2(  ngm))    
   allocate (aux3(  ngm))    
   allocate (aux5(  ngm))    
   allocate (qmodg( ngm))    
-  allocate (veff ( nrxx , nspin))    
   allocate (ylmk0( ngm , lmaxq * lmaxq))    
   allocate (qgm  ( ngm))    
   if (.not.lgamma) then
      allocate (ylmkq(ngm , lmaxq * lmaxq))    
-     allocate (qpg (3, ngm))    
      allocate (qmod( ngm))    
      allocate (qgmq( ngm))    
   else
@@ -80,8 +79,10 @@ subroutine dvanqq
      qmodg (ig) = sqrt (gg (ig) )
   enddo
   if (.not.lgamma) then
+     allocate (qpg (3, ngm))    
      call setqmod (ngm, xq, g, qmod, qpg)
      call ylmr2 (lmaxq * lmaxq, ngm, qpg, qmod, ylmkq)
+     deallocate (qpg)
      do ig = 1, ngm
         qmod (ig) = sqrt (qmod (ig) )
      enddo
@@ -89,6 +90,7 @@ subroutine dvanqq
   !
   !   we start by computing the FT of the effective potential
   !
+  allocate (veff ( nrxx , nspin))    
   do is = 1, nspin
      do ir = 1, nrxx
         veff (ir, is) = DCMPLX (vltot (ir) + vr (ir, is), 0.d0)
@@ -96,23 +98,10 @@ subroutine dvanqq
      call cft3 (veff (1, is), nr1, nr2, nr3, nrx1, nrx2, nrx3, - 1)
   enddo
   !
-  !
   !     We compute here four of the five integrals needed in the phonon
   !
   fact1 = DCMPLX (0.d0, - tpiba * omega)
-  !do na = 1, nat
-  !   nta = ityp (na)
-  !   do ig = 1, ngm
-  !      sk (ig) = vlocq (ig, nta) * eigts1 (ig1 (ig), na) &
-  !                                * eigts2 (ig2 (ig), na) &
-  !                                * eigts3 (ig3 (ig), na)
-  !   enddo
-  !   do ipol = 1, 3
-  !      do ig = 1, ngm
-  !         aux5 (ig, na, ipol) = sk (ig) * (g (ipol, ig) + xq (ipol) )
-  !      enddo
-  !   enddo
-  !enddo
+  !
   do ntb = 1, ntyp
      if (tvanp (ntb) ) then
         ijh = 0
@@ -123,12 +112,11 @@ subroutine dvanqq
               !    compute the augmentation function
               !
               call qvan2 (ngm, ih, jh, ntb, qmodg, qgm, ylmk0)
-
+              !
               if (.not.lgamma) call qvan2 (ngm, ih, jh, ntb, qmod, qgmq, ylmkq)
               !
               !     NB: for this integral the moving atom and the atom of Q
               !     do not necessarily coincide
-              !
               !
               do nb = 1, nat
                  if (ityp (nb) == ntb) then
@@ -143,12 +131,14 @@ subroutine dvanqq
                        !    nb is the atom of the augmentation function
                        !
                        nta = ityp (na)
+                       do ig=1, ngm
+                          sk(ig)=vlocq(ig,nta) * eigts1(ig1 (ig), na) &
+                                               * eigts2(ig2 (ig), na) &
+                                               * eigts3(ig3 (ig), na) 
+                       enddo
                        do ipol = 1, 3
                           do ig=1, ngm
-                            aux5(ig)=vlocq(ig,nta)*eigts1(ig1 (ig),na) &
-                                  * eigts2 (ig2 (ig), na) &
-                                  * eigts3 (ig3 (ig), na) &
-                                  * (g (ipol, ig) + xq (ipol) )
+                            aux5(ig)= sk(ig) * (g (ipol, ig) + xq (ipol) )
                           enddo
                           int2 (ih, jh, ipol, na, nb) = fact * fact1 * &
                                 ZDOTC (ngm, aux1, 1, aux5, 1)
@@ -235,20 +225,20 @@ subroutine dvanqq
   !         enddo
   !      enddo
   !      call stop_ph(.true.)
+  deallocate (veff)
   if (.not.lgamma) then
      deallocate(qgmq)
      deallocate (qmod)
-     deallocate (qpg)
      deallocate (ylmkq)
   endif
   deallocate (qgm)
   deallocate (ylmk0)
-  deallocate (veff)
   deallocate (qmodg)
   deallocate (aux5)
   deallocate (aux3)
   deallocate (aux2)
   deallocate (aux1)
+  deallocate (sk)
 
   call stop_clock ('dvanqq')
   return
